--- a/DoAn_Nhom3/LibraryManagement/wwwroot/css/site.css
+++ b/DoAn_Nhom3/LibraryManagement/wwwroot/css/site.css
@@ -115,3 +115,20 @@ body {
 }
 
 /* Dashboard End*/
+
+
+/* Custom validation summary styling */
+.validation-box {
+    display: flex;
+    align-items: center; /* canh giữa theo chiều dọc */
+    padding: 12px 16px;
+}
+
+    .validation-box ul {
+        margin: 0;
+        padding-left: 18px; /* giữ dấu chấm tròn đẹp */
+    }
+
+    .validation-box li {
+        line-height: 1.5;
+    }
