--- a/DoAn_Nhom3/LibraryManagement/Views/SachQuaHans/Details.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/SachQuaHans/Details.cshtml
@@ -16,7 +16,7 @@
     <!-- Thông tin phiếu mượn -->
     <div class="card mb-4">
         <div class="card-header bg-danger text-white">
-            <h5 class="mb-0">📋 Thông tin phiếu mượn quá hạn</h5>
+            <h5 class="mb-0">Thông tin phiếu mượn quá hạn</h5>
 
         </div>
         <div class="card-body">
